fixed page layout to work better on small mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ a{
 
 #content{
     margin: auto;
-    width: 90%;
+    width: 100%;
     display: block;
 }
 
